# test-template-workflow

./: CITATION.cff  CODE_OF_CONDUCT.md  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: docker.yml  greetings.yml  pypi-prod.yml  pypi-test.yml  release-drafter.yml  test.yml  test_template.yml
docker/: Dockerfile  README.md
python_project_gh_workflow/: __init__.py  __main__.py
tests/: test_hello.py
